# Atelier

./: .clang-format  CMakeLists.txt  readme.md
include/atelier/: atelier.h  atelier_base.h  atelier_vk.h  atelier_vk_completed.h  atelier_vk_mutable.h
source/: _application_wwinmain.cpp  logger.cpp  vk_complete_state.cpp  vk_device.cpp  vk_instance.cpp  vk_presurface.cpp  vk_surface.cpp  vk_swapchain.cpp  win32_window_class.cpp
